-- Location seed table (13 static rows inserted in V2).
CREATE TABLE location (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(32) NOT NULL,
    description VARCHAR(128) NOT NULL,
    route_order SMALLINT,
    is_detour BOOLEAN NOT NULL,
    branches_from_id BIGINT,
    latitude DOUBLE NOT NULL,
    longitude DOUBLE NOT NULL,
    detour_bonus_stat VARCHAR(16),
    detour_bonus_value INTEGER,
    CONSTRAINT pk_location PRIMARY KEY (id),
    CONSTRAINT uk_location_name UNIQUE (name),
    CONSTRAINT fk_location_branches_from_id
        FOREIGN KEY (branches_from_id) REFERENCES location(id),
    CONSTRAINT location_route_shape_chk CHECK (
        (is_detour = FALSE
            AND route_order IS NOT NULL
            AND route_order BETWEEN 1 AND 10
            AND branches_from_id IS NULL)
        OR
        (is_detour = TRUE
            AND route_order IS NULL
            AND branches_from_id IS NOT NULL)
    ),
    CONSTRAINT location_bonus_pair_chk CHECK (
        (detour_bonus_stat IS NULL AND detour_bonus_value IS NULL)
        OR
        (detour_bonus_stat IS NOT NULL AND detour_bonus_value IS NOT NULL)
    ),
    CONSTRAINT location_bonus_only_on_detour_chk CHECK (
        is_detour = TRUE OR detour_bonus_stat IS NULL
    )
);

-- Event catalog table (18 static rows inserted in V3).
CREATE TABLE event (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(48) NOT NULL,
    description VARCHAR(255) NOT NULL,
    event_type VARCHAR(16) NOT NULL,
    location_id BIGINT,
    has_choice BOOLEAN NOT NULL,
    auto_cash_effect INTEGER NOT NULL,
    auto_customers_effect INTEGER NOT NULL,
    auto_morale_effect INTEGER NOT NULL,
    auto_coffee_effect INTEGER NOT NULL,
    auto_bugs_effect INTEGER NOT NULL,
    special_effect VARCHAR(20),
    CONSTRAINT pk_event PRIMARY KEY (id),
    CONSTRAINT uk_event_name UNIQUE (name),
    CONSTRAINT fk_event_location_id
        FOREIGN KEY (location_id) REFERENCES location(id),
    CONSTRAINT event_location_id_type_chk CHECK (
        (event_type = 'LOCATION' AND location_id IS NOT NULL)
        OR
        (event_type <> 'LOCATION' AND location_id IS NULL)
    )
);

-- Event choices table (24 static rows inserted in V3).
CREATE TABLE event_choice (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    event_id BIGINT NOT NULL,
    label VARCHAR(64) NOT NULL,
    cash_effect INTEGER NOT NULL,
    customers_effect INTEGER NOT NULL,
    morale_effect INTEGER NOT NULL,
    coffee_effect INTEGER NOT NULL,
    bugs_effect INTEGER NOT NULL,
    special_effect VARCHAR(20),
    CONSTRAINT pk_event_choice PRIMARY KEY (id),
    CONSTRAINT fk_event_choice_event_id
        FOREIGN KEY (event_id) REFERENCES event(id)
);

-- Mutable per-playthrough state table.
CREATE TABLE game_session (
    id UUID,
    status VARCHAR(16) NOT NULL,
    game_end_reason VARCHAR(24),
    current_location_id BIGINT NOT NULL,
    game_start_date DATE NOT NULL,
    current_game_date DATE NOT NULL,
    cash INTEGER NOT NULL,
    customers INTEGER NOT NULL,
    morale INTEGER NOT NULL,
    coffee INTEGER NOT NULL,
    bugs INTEGER NOT NULL,
    is_mutiny_ready BOOLEAN NOT NULL,
    is_burnout_ready BOOLEAN NOT NULL,
    is_linkedin_bonus_active BOOLEAN NOT NULL,
    pending_crypto_settlement INTEGER,
    CONSTRAINT pk_game_session PRIMARY KEY (id),
    CONSTRAINT fk_game_session_current_location_id
        FOREIGN KEY (current_location_id) REFERENCES location(id)
);

-- Join table for pending event IDs per game session.
CREATE TABLE game_session_pending_events (
    game_session_id UUID NOT NULL,
    event_id BIGINT NOT NULL,
    CONSTRAINT pk_game_session_pending_events
        PRIMARY KEY (game_session_id, event_id),
    CONSTRAINT fk_game_session_pending_events_game_session_id
        FOREIGN KEY (game_session_id) REFERENCES game_session(id) ON DELETE CASCADE
);

-- Join table for already-fired location event IDs per game session.
CREATE TABLE game_session_fired_location_events (
    game_session_id UUID NOT NULL,
    event_id BIGINT NOT NULL,
    CONSTRAINT pk_game_session_fired_location_events
        PRIMARY KEY (game_session_id, event_id),
    CONSTRAINT fk_game_session_fired_location_events_game_session_id
        FOREIGN KEY (game_session_id) REFERENCES game_session(id) ON DELETE CASCADE
);
